# cm360-bigquery

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
configs/: pipelines.yaml
scripts/: create_scheduler_job.sh  deploy_cloud_run.sh
src/: __init__.py  attachment_parser.py  auth.py  bq_loader.py  config_loader.py  dynamic_ingestion.py  gmail_client.py  main.py  models.py  pipeline_runner.py  project_store.py
templates/: index.html  login.html  projects.html
